vs2003_cd01/Program Files/Microsoft Visual Studio .NET 2003/SDK/v1.1/QuickStart/aspplus/samples/apps/errors/custom1/custom1.src
C# Source:CS/custom1.aspx,CS/genericerror.htm,CS/web.config
VB Source:VB/custom1.aspx,VB/genericerror.htm,VB/web.config
JScript Source:JS/custom1.aspx,JS/genericerror.htm,JS/web.config
